--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,13 +8,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Oleose App Landing Page | Bootstrap Theme</title>
+    <title>Topicity</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <link rel="shortcut icon" href="favicon.png">
-
+    
     <link rel="stylesheet" href="css/bootstrap.css">
-
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/slick.css">
@@ -175,7 +176,7 @@
                             data-speed="1000"
                             data-start="700"
                             data-easing="Power4.easeOut">
-                            <img src="img/eco/Slides/family-eco.png" alt="">
+                            <imeg src="img/eco/Slides/family-eco.png" alt="">
                         </div>
 
                         <div class="tp-caption customin customout visible-xs"
@@ -231,38 +232,42 @@
                 <div class="section-heading scrollpoint sp-effect3">
                     <h1>About Us</h1>
                     <div class="divider"></div>
-                    <p>Oleose Beautiful App Landing Page</p>
+                    <p></p>
                 </div>
 
                 <div class="row">
                     <div class="col-md-3 col-sm-3 col-xs-6">
-                        <div class="about-item scrollpoint sp-effect2">
-                            <i class="fa fa-download fa-2x"></i>
-                            <h3>Easy setup</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-                        </div>
+                        
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6" >
-                        <div class="about-item scrollpoint sp-effect5">
-                            <i class="fa fa-mobile fa-2x"></i>
-                            <h3>On-the-go</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-                        </div>
+                       <div id="chart">
+  <ul id="numbers">
+    <li><span>12,000</span></li>
+    <li><span>10,800</span></li>
+    <li><span>9,600</span></li>
+    <li><span>8,400</span></li>
+    <li><span>7,200</span></li>
+    <li><span>6,000</span></li>
+    <li><span>4,800</span></li>
+    <li><span>3,600</span></li>
+    <li><span>2,400</span></li>
+    <li><span>1,200</span></li>
+    <li><span>(GWh)</span></li>
+  </ul>
+  
+  <ul id="bars">
+    <li><div data-percentage="64" data-id="7,749" class="bar"></div><span>2012</span></li>
+    <li><div data-percentage="66" data-id="7,919" class="bar"></div><span>2013</span></li>
+    <li><div data-percentage="71" data-id="8,578" class="bar"></div><span>2014</span></li>
+    <li><div data-percentage="82" data-id="9,801" class="bar"></div><span>2015</span></li>
+    <li><div data-percentage="92" data-id="11,059" class="bar"></div><span>2016</span></li>
+  </ul>
+</div>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6" >
-                        <div class="about-item scrollpoint sp-effect5">
-                            <i class="fa fa-users fa-2x"></i>
-                            <h3>Social connect</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-                        </div>
+                        
                     </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6" >
-                        <div class="about-item scrollpoint sp-effect1">
-                            <i class="fa fa-sliders fa-2x"></i>
-                            <h3>Dedicated support</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
         </section>
