--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -411,7 +411,7 @@
                 <div class="row">
                   <div class="col-md-2">
                     <div class="review-person">
-                      <img src="http://api.randomuser.me/portraits/women/94.jpg" alt="" class="img-responsive">
+                      <img src="http://i.imgur.com/HUwoGKk.jpg" alt="" class="img-responsive">
                     </div>
                   </div>
                   <div class="col-md-10">
@@ -435,7 +435,7 @@
                 <div class="row">
                   <div class="col-md-2">
                     <div class="review-person">
-                      <img src="http://api.randomuser.me/portraits/men/70.jpg" alt="" class="img-responsive">
+                      <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTZTp40w_JH1BJdCYbMRQx3B0A2XrU4yeTVRnPcBLd5D-h1OooIDA" alt="" class="img-responsive">
                     </div>
                   </div>
                   <div class="col-md-10">
@@ -459,7 +459,7 @@
                 <div class="row">
                   <div class="col-md-2">
                     <div class="review-person">
-                      <img src="http://api.randomuser.me/portraits/men/93.jpg" alt="" class="img-responsive">
+                      <img src="https://upload.wikimedia.org/wikipedia/commons/c/c5/Al_Gore,_Vice_President_of_the_United_States,_official_portrait_1994.jpg" alt="" class="img-responsive">
                     </div>
                   </div>
                   <div class="col-md-10">
