--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -36,7 +36,7 @@
 
   <div class="pre-loader">
     <div class="load-con">
-      <img src="http://i.imgur.com/1NDZRT2.pn" class="animated fadeInDown" alt="">
+      <img src="http://i.imgur.com/1NDZRT2.png" class="animated fadeInDown" alt="">
       <div class="spinner">
         <div class="bounce1"></div>
         <div class="bounce2"></div>
