--- a/public/bar-graph/style.css
+++ b/public/bar-graph/style.css
@@ -4,7 +4,7 @@ body {
   font-family: Roboto;
 }
 #chart {
-  width: 650px;
+  width: 100%;
   height: 300px;
   margin: 30px auto 0;
   display: block;
