--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -70,16 +70,16 @@
       <!-- /.container-->
     </nav>
 
-  <!--  RevSlider 
+   <!--  RevSlider -->
     <div class="tp-banner-container">
       <div class="tp-banner">
         <ul>
-          <!-- SLIDE  
+          <!-- SLIDE  -->
           <li data-transition="fade" data-slotamount="7" data-masterspeed="1500">
-            <!-- MAIN IMAGE 
+            <!-- MAIN IMAGE -->
             <img src="img/transparent.png" alt="slidebg1" data-bgfit="cover" data-bgposition="left top" data-bgrepeat="no-repeat">
             <!-- LAYERS -->
-            <!-- LAYER NR. 1 
+            <!-- LAYER NR. 1 -->
             <div class="tp-caption lfl fadeout hidden-xs" data-x="left" data-y="bottom" data-hoffset="30" data-voffset="0" data-speed="500" data-start="700" data-easing="Power4.easeOut">
               <img src="img/eco/Slides/hand-eco.png" alt="">
             </div>
@@ -101,7 +101,7 @@
             <div class="tp-caption sfb hidden-xs" data-x="550" data-y="center" data-hoffset="0" data-voffset="85" data-speed="1000" data-start="1700" data-easing="Power4.easeOut">
               <a href="#about" class="btn btn-primary inverse btn-lg">LEARN MORE</a>
             </div>
-            <!-- <div class="tp-caption sfr hidden-xs" data-x="730" data-y="center" data-hoffset="0" data-voffset="85" data-speed="1500" data-start="1900" data-easing="Power4.easeOut">
+            <<div class="tp-caption sfr hidden-xs" data-x="730" data-y="center" data-hoffset="0" data-voffset="85" data-speed="1500" data-start="1900" data-easing="Power4.easeOut">
                             <a href="#getApp" class="btn btn-default btn-lg">GET APP</a>
                         </div>
 
@@ -160,12 +160,12 @@
             </div>
 
 
-          </li>
+          </li>-->
 
         </ul>
       </div>
     </div>
--->
+
   </header>
 
   <div class="wrapper">
