--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,7 +8,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Oleose App Landing Page | Bootstrap Theme</title>
+    <title>Topicity</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <link rel="shortcut icon" href="favicon.png">
@@ -35,7 +35,7 @@
 
     <div class="pre-loader">
         <div class="load-con">
-            <img src="img/eco/logo.png" class="animated fadeInDown" alt="">
+            <img src="http://i.imgur.com/A2nKjuJ.png" class="animated fadeInDown" alt="">
             <div class="spinner">
               <div class="bounce1"></div>
               <div class="bounce2"></div>
@@ -52,8 +52,8 @@
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                             <span class="fa fa-bars fa-lg"></span>
                         </button>
-                        <a class="navbar-brand" href="index.html">
-                            <img src="img/eco/logo.png" alt="" class="logo">
+                        <a class="navbar-brand" href="layout.ejs">
+                            <img src="http://i.imgur.com/A2nKjuJ.png" alt="" class="logo">
                         </a>
                     </div>
 
@@ -95,9 +95,9 @@
                         <!-- LAYER NR. 1 -->
                         <div class="tp-caption lfl fadeout hidden-xs"
                             data-x="left"
-                            data-y="bottom"
+                            data-y="top"
                             data-hoffset="30"
-                            data-voffset="0"
+                            data-voffset="200"
                             data-speed="500"
                             data-start="700"
                             data-easing="Power4.easeOut">
@@ -106,9 +106,9 @@
 
                         <div class="tp-caption lfl fadeout visible-xs"
                             data-x="left"
-                            data-y="center"
+                            data-y="bottom"
                             data-hoffset="700"
-                            data-voffset="0"
+                            data-voffset="300"
                             data-speed="500"
                             data-start="700"
                             data-easing="Power4.easeOut">
@@ -124,14 +124,6 @@
                         <div class="tp-caption large_white_light sfb" data-x="550" data-y="center" data-hoffset="0" data-voffset="0" data-speed="1000" data-start="1500" data-easing="Power4.easeOut">
                             Smart Meter
                         </div>
-
-                        <div class="tp-caption sfb hidden-xs" data-x="550" data-y="center" data-hoffset="0" data-voffset="85" data-speed="1000" data-start="1700" data-easing="Power4.easeOut">
-                            <a href="#about" class="btn btn-primary inverse btn-lg">LEARN MORE</a>
-                        </div>
-                        <div class="tp-caption sfr hidden-xs" data-x="730" data-y="center" data-hoffset="0" data-voffset="85" data-speed="1500" data-start="1900" data-easing="Power4.easeOut">
-                            <a href="#getApp" class="btn btn-default btn-lg">GET APP</a>
-                        </div>
-
                     </li>
                     <!-- SLIDE 2 -->
                     <li data-transition="zoomout" data-slotamount="7" data-masterspeed="1000" >
@@ -147,7 +139,7 @@
                             data-speed="1000"
                             data-start="700"
                             data-easing="Power4.easeOut">
-                            <img src="http://www.silhcdn.com/3/i/shapes/lg/7/4/d37647.jpg" alt="">
+                            <img src="http://i.imgur.com/2ch8viA.png" alt="">
                         </div>
                         <div class="tp-caption large_white_light sft" data-x="center" data-y="250" data-hoffset="0" data-voffset="0" data-speed="1000" data-start="1400" data-easing="Power4.easeOut">
                             Every Watt <i class="fa fa-heart"></i>
